// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match after all movies deleted 1`] = `
<main
  class="container"
>
  <div>
    There are no movies in the database.
  </div>
</main>
`;

exports[`should match after movie deletion 1`] = `
<main
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-2"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item active"
          data-testid="filter-All"
        >
          All Genere
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Action"
        >
          Action
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Comedy"
        >
          Comedy
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Thriller"
        >
          Thriller
        </li>
      </ul>
    </div>
    <div
      class="col"
    >
      <div>
        Showing 
        8
         movies in the database.
      </div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th
              data-testid="title-heading"
              scope="col"
            >
              Title
            </th>
            <th
              data-testid="genre-heading"
              scope="col"
            >
              Genere
            </th>
            <th
              data-testid="stock-heading"
              scope="col"
            >
              Stock
            </th>
            <th
              data-testid="rate-heading"
              scope="col"
            >
              Rate
            </th>
            <th
              scope="col"
            />
            <th
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              data-testid="row0-title"
            >
              Die Hard
            </td>
            <td
              data-testid="row0-genre"
            >
              Action
            </td>
            <td
              data-testid="row0-stock"
            >
              5
            </td>
            <td
              data-testid="row0-rate"
            >
              2.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row1-title"
            >
              Get Out
            </td>
            <td
              data-testid="row1-genre"
            >
              Thriller
            </td>
            <td
              data-testid="row1-stock"
            >
              8
            </td>
            <td
              data-testid="row1-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row2-title"
            >
              Trip to Italy
            </td>
            <td
              data-testid="row2-genre"
            >
              Comedy
            </td>
            <td
              data-testid="row2-stock"
            >
              7
            </td>
            <td
              data-testid="row2-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row3-title"
            >
              Airplane
            </td>
            <td
              data-testid="row3-genre"
            >
              Comedy
            </td>
            <td
              data-testid="row3-stock"
            >
              7
            </td>
            <td
              data-testid="row3-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        aria-label="Page navigation example"
      >
        <ul
          class="pagination"
        >
          <li
            class="page-item active"
          >
            <a
              class="page-link"
              data-testid="page-1"
            >
              1
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="page-2"
            >
              2
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</main>
`;

exports[`should match filtering 1`] = `
<main
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-2"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item"
          data-testid="filter-All"
        >
          All Genere
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Action"
        >
          Action
        </li>
        <li
          class="list-group-item active"
          data-testid="filter-Comedy"
        >
          Comedy
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Thriller"
        >
          Thriller
        </li>
      </ul>
    </div>
    <div
      class="col"
    >
      <div>
        Showing 
        3
         movies in the database.
      </div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th
              data-testid="title-heading"
              scope="col"
            >
              Title
            </th>
            <th
              data-testid="genre-heading"
              scope="col"
            >
              Genere
            </th>
            <th
              data-testid="stock-heading"
              scope="col"
            >
              Stock
            </th>
            <th
              data-testid="rate-heading"
              scope="col"
            >
              Rate
            </th>
            <th
              scope="col"
            />
            <th
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              data-testid="row0-title"
            >
              Trip to Italy
            </td>
            <td
              data-testid="row0-genre"
            >
              Comedy
            </td>
            <td
              data-testid="row0-stock"
            >
              7
            </td>
            <td
              data-testid="row0-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row1-title"
            >
              Airplane
            </td>
            <td
              data-testid="row1-genre"
            >
              Comedy
            </td>
            <td
              data-testid="row1-stock"
            >
              7
            </td>
            <td
              data-testid="row1-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row2-title"
            >
              Wedding Crashers
            </td>
            <td
              data-testid="row2-genre"
            >
              Comedy
            </td>
            <td
              data-testid="row2-stock"
            >
              7
            </td>
            <td
              data-testid="row2-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</main>
`;

exports[`should match pagination 1`] = `
<main
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-2"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item active"
          data-testid="filter-All"
        >
          All Genere
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Action"
        >
          Action
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Comedy"
        >
          Comedy
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Thriller"
        >
          Thriller
        </li>
      </ul>
    </div>
    <div
      class="col"
    >
      <div>
        Showing 
        9
         movies in the database.
      </div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th
              data-testid="title-heading"
              scope="col"
            >
              Title
            </th>
            <th
              data-testid="genre-heading"
              scope="col"
            >
              Genere
            </th>
            <th
              data-testid="stock-heading"
              scope="col"
            >
              Stock
            </th>
            <th
              data-testid="rate-heading"
              scope="col"
            >
              Rate
            </th>
            <th
              scope="col"
            />
            <th
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              data-testid="row0-title"
            >
              The Avengers
            </td>
            <td
              data-testid="row0-genre"
            >
              Action
            </td>
            <td
              data-testid="row0-stock"
            >
              7
            </td>
            <td
              data-testid="row0-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        aria-label="Page navigation example"
      >
        <ul
          class="pagination"
        >
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="page-1"
            >
              1
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="page-2"
            >
              2
            </a>
          </li>
          <li
            class="page-item active"
          >
            <a
              class="page-link"
              data-testid="page-3"
            >
              3
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</main>
`;

exports[`should match the intial page render snapshot 1`] = `
<main
  class="container"
>
  <div
    class="row"
  >
    <div
      class="col-2"
    >
      <ul
        class="list-group"
      >
        <li
          class="list-group-item active"
          data-testid="filter-All"
        >
          All Genere
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Action"
        >
          Action
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Comedy"
        >
          Comedy
        </li>
        <li
          class="list-group-item"
          data-testid="filter-Thriller"
        >
          Thriller
        </li>
      </ul>
    </div>
    <div
      class="col"
    >
      <div>
        Showing 
        9
         movies in the database.
      </div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th
              data-testid="title-heading"
              scope="col"
            >
              Title
            </th>
            <th
              data-testid="genre-heading"
              scope="col"
            >
              Genere
            </th>
            <th
              data-testid="stock-heading"
              scope="col"
            >
              Stock
            </th>
            <th
              data-testid="rate-heading"
              scope="col"
            >
              Rate
            </th>
            <th
              scope="col"
            />
            <th
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              data-testid="row0-title"
            >
              Terminator
            </td>
            <td
              data-testid="row0-genre"
            >
              Action
            </td>
            <td
              data-testid="row0-stock"
            >
              6
            </td>
            <td
              data-testid="row0-rate"
            >
              2.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row1-title"
            >
              Die Hard
            </td>
            <td
              data-testid="row1-genre"
            >
              Action
            </td>
            <td
              data-testid="row1-stock"
            >
              5
            </td>
            <td
              data-testid="row1-rate"
            >
              2.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row2-title"
            >
              Get Out
            </td>
            <td
              data-testid="row2-genre"
            >
              Thriller
            </td>
            <td
              data-testid="row2-stock"
            >
              8
            </td>
            <td
              data-testid="row2-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
          <tr>
            <td
              data-testid="row3-title"
            >
              Trip to Italy
            </td>
            <td
              data-testid="row3-genre"
            >
              Comedy
            </td>
            <td
              data-testid="row3-stock"
            >
              7
            </td>
            <td
              data-testid="row3-rate"
            >
              3.5
            </td>
            <td>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-heart fa-w-16 "
                data-icon="heart"
                data-prefix="far"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill="currentColor"
                />
              </svg>
            </td>
            <td>
              <button
                class="btn btn-danger"
              >
                Delete
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        aria-label="Page navigation example"
      >
        <ul
          class="pagination"
        >
          <li
            class="page-item active"
          >
            <a
              class="page-link"
              data-testid="page-1"
            >
              1
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="page-2"
            >
              2
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="page-3"
            >
              3
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</main>
`;
